manifest/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: basic-app
  labels:
    name: basic-app
